--- a/package.json
+++ b/package.json
@@ -25,23 +25,24 @@
     "@ionic-native/status-bar": "5.0.0-beta.14",
     "@ionic/angular": "^4.0.0-beta.0",
     "core-js": "^2.5.3",
-    "rxjs": "6.2.2",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.5.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "~0.7.2",
+    "@angular-devkit/build-angular": "^0.7.5",
+    "@angular-devkit/core": "~0.7.2",
+    "@angular-devkit/schematics": "~0.7.2",
     "@angular/cli": "~6.1.1",
     "@angular/compiler": "~6.1.1",
     "@angular/compiler-cli": "~6.1.1",
     "@angular/language-service": "~6.1.1",
-    "@angular-devkit/architect": "~0.7.2",
-    "@angular-devkit/build-angular": "~0.7.2",
-    "@angular-devkit/core": "~0.7.2",
-    "@angular-devkit/schematics": "~0.7.2",
     "@ionic/ng-toolkit": "^1.0.0",
     "@ionic/schematics-angular": "^1.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.7.1",
+    "@types/node": "^10.1.4",
     "codelyzer": "~4.4.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
